# rust-leptos-playground

./: .gitignore  Cargo.toml  README.adoc  index.html
hello_axum/backend/: Cargo.toml
hello_axum/backend/src/: main.rs
hello_axum/frontend/: Cargo.toml  Trunk.toml  index.html
hello_axum/frontend/src/: app.rs  main.rs  qrcode.rs
hello_axum/frontend/src/charts/: bar.rs  mod.rs  pie.rs
leptos_charts/: Cargo.toml
leptos_charts/src/: lib.rs
leptos_charts/src/charts/: mod.rs
src/: main.rs
