[package]
name = "rust-leptos-playground-hello-axum-frontend"
version = "0.1.0"
edition.workspace = true

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = { version = "0.3.0", features = ["stable"] }
leptos_router = { version = "0.3.0", features = ["csr", "stable"] }
log = "0.4.17"
reqwasm = "0.5.0"
serde = { version = "1.0.160", features = ["derive"] }
thiserror = "1.0.40"
rand = { version = "0.8.5", default-features = false, features = ["alloc"] }
color-art = { version = "0.3.1" }
getrandom = { features = ["js"] }
nalgebra = { version = "0.32.2" }
