[package]
name = "rust-leptos-playground-hello-axum-frontend"
version = "0.1.0"
edition.workspace = true

[dependencies]
color-art = { version = "0.3.1" }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
getrandom = { features = ["js"] }
leptos = { version = "0.3.0", features = ["stable"] }
leptos_router = { version = "0.3.0", features = ["csr", "stable"] }
log = "0.4.18"
nalgebra = { version = "0.32.2" }
rand = { version = "0.8.5", default-features = false, features = ["alloc"] }
reqwasm = "0.5.0"
serde = { version = "1.0.163", features = ["derive"] }
thiserror = "1.0.40"

leptos_charts = { path = "../../leptos_charts" }
